This code doesn't work, but it's a start.

--- a/Quiz Bowl UI/Base.lproj/Main.storyboard
+++ b/Quiz Bowl UI/Base.lproj/Main.storyboard
@@ -669,6 +669,37 @@ Gw
             </objects>
             <point key="canvasLocation" x="-908" y="984"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="Baw-tr-uTQ">
+            <objects>
+                <viewController id="pbs-Ke-bxr" sceneMemberID="viewController">
+                    <view key="view" id="3kf-hw-ECI">
+                        <rect key="frame" x="0.0" y="0.0" width="960" height="720"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <subviews>
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="JCA-YZ-SxX">
+                                <rect key="frame" x="427" y="648" width="106" height="17"/>
+                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Congratulations!" id="CKP-7x-vd0">
+                                    <font key="font" metaFont="system"/>
+                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vUI-U1-Cja">
+                                <rect key="frame" x="461" y="599" width="40" height="17"/>
+                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="    h   " id="lme-SG-MpJ">
+                                    <font key="font" metaFont="system"/>
+                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                        </subviews>
+                    </view>
+                </viewController>
+                <customObject id="R3c-Xj-X2L" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-908" y="1800"/>
+        </scene>
         <!--Main Page-->
         <scene sceneID="hIz-AP-VOD">
             <objects>
